Fixed hero homepage misalignment

--- a/src/assets/css/includes/_hero.scss
+++ b/src/assets/css/includes/_hero.scss
@@ -47,6 +47,12 @@
 			// max-width: 850px;
 			margin: auto;
 			text-align: center;
+			justify-content: center;
+
+			h1 {
+				margin-left: auto;
+				margin-right: auto;
+			}
 		}
 	}
 
